--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -32,7 +32,7 @@ header {
     }
 
     .container {
-        padding: 20px 0;
+        padding: 20px 20px;
         height: 110px;
         
         @media (min-width: $brk-point-s) {
